[package]
name = "tpg-kb-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
multiinput = "0.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12.1"
[dependencies]
regex = "1.10.3"